force-app/main/default/objects/Donate__c/Donate__c.object-meta.xml
<CustomObject>
    <label>Donate</label>
    <nameField>
        <label>Donate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>