force-app/main/default/objects/Donate__c/fields/Donate_Date__c.field-meta.xml
<CustomField>
    <fullName>Donate_Date__c</fullName>
    <label>Donate Date</label>
    <type>Date</type>
</CustomField>