force-app/main/default/objects/Donate__c/fields/Program_Budget__c.field-meta.xml
<CustomField>
    <fullName>Program_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Budget</label>
    <referenceTo>Program_Budget__c</referenceTo>
    <relationshipLabel>Donates</relationshipLabel>
    <relationshipName>Donates</relationshipName>
    <type>Lookup</type>
</CustomField>