force-app/main/default/objects/Donate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Donate_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Program_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>